@@ -53,7 +53,7 @@
     <platform-version-name>indigo</platform-version-name>
     <eclipse-site>http://download.eclipse.org/releases/${platform-version-name}</eclipse-site>
     <swtbot-site>http://download.eclipse.org/technology/swtbot/helios/dev-build/update-site</swtbot-site>
-    <orbit-site>http://download.eclipse.org/tools/orbit/downloads/drops/R20110523182458/repository</orbit-site>
+    <orbit-site>http://download.eclipse.org/tools/orbit/downloads/drops/S20120123151124/repository</orbit-site>
   </properties>
 
   <pluginRepositories>
@@ -62,6 +62,22 @@
       <url>http://maven.eclipse.org/nexus/content/groups/public/</url>
     </pluginRepository>
   </pluginRepositories>
+  <repositories>
+    <repository>
+      <id>swtbot</id>
+      <layout>p2</layout>
+      <url>${swtbot-site}</url>
+    </repository>
+    <repository>
+      <id>orbit</id>
+      <layout>p2</layout>
+      <url>${orbit-site}</url>
+    </repository>
+    <repository>
+      <id>maven.eclipse.org</id>
+      <url>http://maven.eclipse.org/nexus/content/groups/public/</url>
+    </repository>
+  </repositories>
   
   <profiles>
     <profile>
@@ -76,6 +92,7 @@
       <properties>
         <eclipse-site>http://download.eclipse.org/releases/indigo</eclipse-site>
         <platform-version>[3.7,3.8)</platform-version>
+        <sdk-version>3.7</sdk-version>
         <cdt-site>http://download.eclipse.org/tools/cdt/updates/indigo/</cdt-site>
         <cdt-test-site>http://download.eclipse.org/tools/cdt/updates/indigo/</cdt-test-site>
       </properties>
@@ -86,26 +103,11 @@
           <url>${eclipse-site}</url>
         </repository>
         <repository>
-          <id>swtbot</id>
-          <layout>p2</layout>
-          <url>${swtbot-site}</url>
-        </repository>
-        <repository>
-          <id>orbit</id>
-          <layout>p2</layout>
-          <url>${orbit-site}</url>
-        </repository>
-        <repository>
           <id>cdt</id>
           <layout>p2</layout>
           <url>${cdt-site}</url>
         </repository>
-        <repository>
-          <id>maven.eclipse.org</id>
-          <url>http://maven.eclipse.org/nexus/content/groups/public/</url>
-        </repository>
       </repositories>
-  
     </profile>
     <profile>
       <id>platform-juno</id>
@@ -118,6 +120,7 @@
       <properties>
         <eclipse-site>http://download.eclipse.org/releases/juno</eclipse-site>
         <platform-version>[4.2,)</platform-version>
+        <sdk-version>4.2</sdk-version>
         <cdt-site>http://download.eclipse.org/tools/cdt/builds/juno/nightly/</cdt-site>
         <cdt-test-site>http://download.eclipse.org/tools/cdt/updates/indigo/</cdt-test-site>
       </properties>
@@ -126,16 +129,6 @@
           <id>juno</id>
           <layout>p2</layout>
           <url>${eclipse-site}</url>
-        </repository>
-        <repository>
-          <id>swtbot</id>
-          <layout>p2</layout>
-          <url>${swtbot-site}</url>
-        </repository>
-        <repository>
-          <id>orbit</id>
-          <layout>p2</layout>
-          <url>${orbit-site}</url>
         </repository>
         <repository>
           <id>cdt</id>
@@ -147,12 +140,7 @@
           <layout>p2</layout>
           <url>${cdt-test-site}</url>
         </repository>
-        <repository>
-          <id>maven.eclipse.org</id>
-          <url>http://maven.eclipse.org/nexus/content/groups/public/</url>
-        </repository>
       </repositories>
-  
     </profile>
   </profiles>
 
@@ -243,7 +231,15 @@
 	  <configuration>
 	    <useUIHarness>true</useUIHarness>
 	    <useUIThread>true</useUIThread>
+            <dependencies>
+               <dependency>
+                 <type>p2-installable-unit</type>
+                 <artifactId>org.eclipse.sdk.feature.group</artifactId>
+                 <version>${sdk-version}</version>
+               </dependency>
+            </dependencies>
             <product>org.eclipse.sdk.ide</product>
+	    <argLine>-Xms512m -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m -Declipse.valgrind.tests.runValgrind=no</argLine>
 	  </configuration>
 	</plugin>
         <plugin>
@@ -276,6 +272,14 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-site-plugin</artifactId>
           <version>3.0</version>
+        </plugin>
+	<plugin>
+	  <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+	  <version>2.8.1</version>
+          <configuration>
+            <excludePackageNames>org.eclipse.linuxtools.internal.*:*.test*</excludePackageNames>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
